objects/MedProSC__MedProPass2DisplayDetailConfig__c.object
<CustomObject>
    <description>A custom object for maintaining the system wide configuration settings for how custom rendered &quot;Pass 2&quot; results are displayed (within a given header/accordion level)</description>
    <fields>
        <fullName>MedProSC__IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked shows up on the second pass of the Lightning component.</description>
        <inlineHelpText>If checked shows up on the second pass of the Lightning component.</inlineHelpText>
        <label>Is Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProFieldName__c</fullName>
        <label>Source Field Name</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Pass_2_Display_Head_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detail Page Configuration</label>
        <referenceTo>MedProSC__MedProPass2DisplayHeadConfig__c</referenceTo>
        <relationshipLabel>MedPro Detail Page Elements</relationshipLabel>
        <relationshipName>MedPro_Pass_2_Display_Detail_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__Ordinal_Position__c</fullName>
        <label>Ordinal Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProSC__SyncReOrderFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncReOrderFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>MedPro Detail Page Element</label>
    <nameField>
        <label>Display Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro Detail Page Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>